--- a/form.html
+++ b/form.html
@@ -66,6 +66,9 @@
                 <td>
                     <input type="submit" value="Sign Up" onClick="success();">
                 </td>
+                 <td>
+                    <input type="button" onClick="location.href='login.html'" value='Click here to login' >
+                </td>
             </tr>
         </form>
     </div>
